# opencl-learning

./: README.md  upload.sh
BandTest/: CMakeLists.txt  oclBandwidthTest.txt  run.sh  test
CreateContext/: CMakeLists.txt  main.cpp  run.sh  test
CreateContext/cl-kernel/: add.cl
GetInfo/: CMakeLists.txt  main.cpp  test
Img2col/: CMakeLists.txt  img2col.cl  main.cpp  run.sh  test
RotateImage/: rotate_image.cl
SyncWorkItme/: CMakeLists.txt  kernel.cl  main.cpp
VecAdd/: main.cpp  test  vecAdd.cl
benchmark/: CMakeLists.txt  main.cpp  rotate_image.cl  test
imagefrombuffer/: CMakeLists.txt  ImageFromBuffer.cl  ImageFromBuffer.cpp  README.md
imagefrombuffer/include/CL/: cl_ext.h
imagefrombuffer/script/: readrgb.py
omp-ocl/: CMakeLists.txt  main.cpp  run.sh  sample.cpp  test
